syntax = "proto3";

package ddec_choreography;

service Choreography {
    rpc RetrieveResults(RetrieveResultsRequest) returns(RetrieveResultsResponse);
    rpc Keygen(KeygenRequest) returns(KeygenResponse);
    rpc RetrievePubkey(PubkeyRequest) returns(PubkeyResponse);
    rpc ThresholdDecrypt(DecryptionRequest) returns(DecryptionResponse);
}

message DecryptionRequest {
    bytes role_assignment = 1;
    bytes mode = 2;
    bytes threshold = 3;
    bytes ciphertext = 4;
}

message DecryptionResponse {
    bytes session_id = 1;
}

message RetrieveResultsRequest {
    bytes session_id = 1;
    uint32 session_range = 2;
}

message RetrieveResultsResponse {
    bytes values = 1;
}

message KeygenRequest {
    bytes epoch_id = 1;
    bytes role_assignment = 2;
    bytes threshold = 3;
    bytes params = 4;
    bytes setup_mode = 5;
}

message KeygenResponse {}

message PubkeyRequest {
    bytes epoch_id = 1;
}

message PubkeyResponse {
    bytes pubkey = 1;
}
